Fix content alignment center with row layout bottom-cta

--- a/src/postcss/blocks/bottom-cta.css
+++ b/src/postcss/blocks/bottom-cta.css
@@ -67,6 +67,14 @@
       }
     }
 
+    &.is-content-alignment-center {
+      & .default-section__inner {
+        @media (--ml) {
+          align-items: center;
+        }
+      }
+    }
+
     & .bottom-cta__footer {
       @media (--ml) {
         width: auto;
